feat(portal): portal as singleton

--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -53,7 +53,7 @@
 <body>
   <div style="position: relative;">
     <q-button id="select">Select an option</q-button>
-    <q-pop-up id="popup" offclick-closes>
+    <q-pop-up id="popup" offclick-closes multiple-clicks>
       <q-menu>
         <q-menu-item>Hello</q-menu-item>
         <q-menu-item>Menu item which should be so long</q-menu-item>
