feat(modal): init

--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -55,7 +55,7 @@
             <q-checkbox></q-checkbox>
             <q-label>Send e-mail</q-label>
           </q-menu-item>
-          <q-menu-item>
+          <!-- <q-menu-item>
             <q-avatar initials="JD" size="m"></q-avatar>
             <div class="person">
               <q-label>John Doe</q-label>
@@ -68,7 +68,7 @@
               <q-label>Sebastian Bušek</q-label>
               <q-caption>Fullstack dev</q-caption>
             </div>
-          </q-menu-item>
+          </q-menu-item> -->
         </q-menu>
       </q-pop-up>
     </div>
