--- a/src/components/src/components/modal/modal.scss
+++ b/src/components/src/components/modal/modal.scss
@@ -9,18 +9,30 @@
   left: 50%;
   height: 400px;
   margin: auto;
-  opacity: 1;
+  opacity: 0;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  transition: visibility 0s linear .2s, opacity .2s linear, transform .2s linear;
-  visibility: visible;
+  //visibility: hidden;
   width: 600px;
+  animation-duration: 10s;
+  animation-name: slidedown;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: paused;
+  animation-delay: 0s;
 
-  &.closing {
-    visibility: hidden;
-    opacity: 0;
-    transform: translate(-50%, -60%);
+  // &.closing {
+  //   visibility: hidden;
+  //   opacity: 0;
+  //   transform: translate(-50%, -60%);
+  // }
+
+  &.opening {
+    // animation-duration: .2s;
+    // animation-name: slidedown;
+    // animation-iteration-count: 1;
+    // animation-fill-mode: forwards;
   }
 
   .header {
@@ -75,5 +87,36 @@
       flex-direction: row;
       margin-right: 20px;
     }
+  }
+}
+
+@keyframes slidedown {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-60%);
+  }
+
+  1% {
+    visibility: visible;
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(-50%);
+  }
+}
+
+@keyframes slideup {
+  0% {
+    opacity: 0;
+    transform: translateY(-50%);
+    visibility: visible;
+  }
+
+  100% {
+    opacity: 1;
+    visibility: hidden;
+    transform: translateY(-60%);
   }
 }
